syntax = "proto3";
package user_engine;

enum Role
{
    REGULATOR = 0;
    COMMON = 1;
    READONLY = 2;
    DBA = 3;
    READ_ONLY = 4;
    OWNER =5;
}

/* 
* key :ledger_linlinSuperMark_user_name 
* value : User
*/

message User
{
    int64 id = 1;
    string name = 2;
    string password = 3;
    string public_key = 4;
    string attachment_ledger =5;
    Role role = 6;
}